# HackOHI-O-2025

./: EDA.ipynb  README.md  combined_line_ratings_output.csv  line_ratings_output.csv  map.html  merged_lines_flows_conductors_geo.csv  newNotebook.ipynb  notebook.ipynb  package-lock.json  package.json  pyproject.toml  trained_model.joblib
aep-prototype-2025-main/: README.md  index.html  tailwind.config.ts
aep-prototype-2025-main/src/: index.css
aep-prototype-2025-main/src/components/: ChatInterface.tsx  MapView.tsx  RiskLegend.tsx
aep-prototype-2025-main/src/pages/: Index.tsx
aep-prototype-2025-main/supabase/: config.toml
line_rating_data/: line_ratings_output1.csv  line_ratings_output10.csv  line_ratings_output11.csv  line_ratings_output12.csv  line_ratings_output13.csv  line_ratings_output14.csv  line_ratings_output15.csv  line_ratings_output16.csv  line_ratings_output17.csv  line_ratings_output18.csv  line_ratings_output19.csv  line_ratings_output2.csv  line_ratings_output20.csv  line_ratings_output21.csv  line_ratings_output22.csv  line_ratings_output23.csv  line_ratings_output24.csv  line_ratings_output25.csv  line_ratings_output26.csv  line_ratings_output27.csv  line_ratings_output28.csv  line_ratings_output29.csv  line_ratings_output3.csv  line_ratings_output30.csv  line_ratings_output31.csv  line_ratings_output32.csv  line_ratings_output33.csv  line_ratings_output34.csv  line_ratings_output4.csv  line_ratings_output5.csv  line_ratings_output6.csv  line_ratings_output7.csv  line_ratings_output8.csv  line_ratings_output9.csv
(+1 files in other folders)
